--- a/notebook/mcq.ipynb
+++ b/notebook/mcq.ipynb
@@ -7,23 +7,16 @@
    "outputs": [],
    "source": [
     "from langchain.prompts import PromptTemplate\n",
-    "from langchain_community.llms import CTransformers"
+    "from langchain_community.llms import CTransformers\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Vincent\\anaconda3\\envs\\genAIenv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### LLama2 model\n",
     "llm=CTransformers(model='../model/llama-2-7b-chat.ggmlv3.q5_1.bin',\n",
@@ -69,7 +62,7 @@
    "source": [
     "number = \"ten\" \n",
     "\n",
-    "subject = \"Biology\"\n",
+    "subject = \"Genomics\"\n",
     "\n",
     "tone = \"simple\"\n",
     "\n",
@@ -115,7 +108,7 @@
     {
      "data": {
       "text/plain": [
-       "StringPromptValue(text=\"\\nYou are an expert MCQ maker.\\nCreate a quiz of ten multiple choice questions for Biology students in simple tone. \\nMake sure the questions are not repeated.\\nMake sure to format your response like RESPONSE_JSON below and use it as a guide. Ensure to make ten MCQs\\n### RESPONSE_JSON\\n{'1': {'mcq': 'multiple choice question', 'options': {'a': 'choice here', 'b': 'choice here', 'c': 'choice here', 'd': 'choice here'}, 'correct': 'correct answer'}, '2': {'mcq': 'multiple choice question', 'options': {'a': 'choice here', 'b': 'choice here', 'c': 'choice here', 'd': 'choice here'}, 'correct': 'correct answer'}, '3': {'mcq': 'multiple choice question', 'options': {'a': 'choice here', 'b': 'choice here', 'c': 'choice here', 'd': 'choice here'}, 'correct': 'correct answer'}}\\n\")"
+       "StringPromptValue(text=\"\\nYou are an expert MCQ maker.\\nCreate a quiz of ten multiple choice questions for Genomics students in simple tone. \\nMake sure the questions are not repeated.\\nMake sure to format your response like RESPONSE_JSON below and use it as a guide. Ensure to make ten MCQs\\n### RESPONSE_JSON\\n{'1': {'mcq': 'multiple choice question', 'options': {'a': 'choice here', 'b': 'choice here', 'c': 'choice here', 'd': 'choice here'}, 'correct': 'correct answer'}, '2': {'mcq': 'multiple choice question', 'options': {'a': 'choice here', 'b': 'choice here', 'c': 'choice here', 'd': 'choice here'}, 'correct': 'correct answer'}, '3': {'mcq': 'multiple choice question', 'options': {'a': 'choice here', 'b': 'choice here', 'c': 'choice here', 'd': 'choice here'}, 'correct': 'correct answer'}}\\n\")"
       ]
      },
      "execution_count": 6,
@@ -137,24 +130,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "### Question 1: What is the process of cellular respiration?\n",
-      "A) Glycolysis, Krebs cycle, and electron transport chain\n",
-      "B) Glycolysis, citric acid cycle, and electron transport chain\n",
-      "C) Glycolysis, electron transport chain, and citric acid cycle\n",
-      "D) Glycolysis, electron transport chain, and citric acid cycle\n",
-      "### Question 2: What is the function of chloroplasts in plants?\n",
-      "A) To synthesize amino acids and nucleotides\n",
-      "B) To produce glucose from carbon dioxide and water\n",
-      "C) To store genetic information\n",
-      "D) To perform photosynthesis\n",
-      "### Question 3: What is the role of enzymes in biological systems?\n",
-      "A) To speed up chemical reactions\n",
-      "B) To slow down chemical reactions\n",
-      "C) To catalyze chemical reactions\n",
-      "D) To control chemical reactions\n",
-      "### Question 4: What is the difference between prokaryotic and eukaryotic cells?\n",
-      "A) Prokaryotic cells lack a true nucleus, while eukaryotic cells have a true nucleus.\n",
-      "B\n"
+      "### Question 1: What is the process of DNA replication?\n",
+      "A) Synthesis of new DNA strands from existing ones.\n",
+      "B) Transcription of DNA into RNA.\n",
+      "C) Translation of RNA into proteins.\n",
+      "D) All of the above.\n",
+      "\n",
+      "### Question 2: Which of the following is not a characteristic of introns?\n",
+      "A) They are found in eukaryotic cells only.\n",
+      "B) They are coding regions of DNA.\n",
+      "C) They are spliced out during mRNA processing.\n",
+      "D) They are located in the 5' untranslated region of mRNA.\n",
+      "\n",
+      "### Question 3: What is the function of the ribosome?\n",
+      "A) To synthesize proteins from amino acids.\n",
+      "B) To transcribe DNA into RNA.\n",
+      "C) To translate RNA into proteins.\n",
+      "D) To repair damaged DNA.\n",
+      "\n",
+      "### Question 4: Which of the following is not a type of RNA?\n",
+      "A) Messenger RNA (mRNA).\n",
+      "B) Transfer RNA (tRNA).\n",
+      "C) Ribosomal R\n"
      ]
     }
    ],
